2013-04-19 Rouslan Solomokhin <at sf.net>
	* fix crash in suggestions for 99-character long words 
	  (hun#3595024, also http://crbug.com/130128),
          thanks to also Paweł Hajdan to report the patch

2013-04-01 Caolán McNamara <caolanm at LibO>:
	* hunspell: -Werror=undef

2013-03-13 Caolán McNamara <caolanm at LibO>:
	* rhbz#918938 crash in interaction with danish thesaurus

2012-09-18 Németh László <nemeth at numbertext dot org>:
        * src/hunspell/affixmgr.*: - fix morphological analysis of
        compound words (hun#3544994, reported by Dávid Nemeskey, fdo#55045)

2012-06-29 Caolán McNamara <caolanm at LibO>:
	* fix various coverity warnings

2012-01-10 Ehsan Akhgari <ehsan at mozilla dot com>
	* moz#710940 Firefox Crash [@ AffixMgr::parse_file(char const*, char
	const*) ]

2011-12-16 Jared Wein <jwein at mozilla dot com>
	* moz#710967 Incorrect argument passed to strncmp in
	AffixMgr::parse_convtable

2011-12-06 Caolán McNamara <caolanm at LibO>:
	* rhbz#759647 fixed tempname of hunSPELL.bak collides with other users
	when multiple edits in one dir

2011-10-13 Caolán McNamara <caolanm at LibO>:
	* moz#694002 crash in hunspell affixmgr on exit with bad .aff
	* leak in hunspell affixmgr with bad .aff

2011-09-19 Caolán McNamara <caolanm at LibO>:
	* make libparsers.a not installed thanks to Tomáš Chvátal

2011-06-23 Caolán McNamara <caolanm at LibO>:
	* fix some windows compiler warnings

2011-05-24 Németh László <nemeth at numbertext dot org>:
        * src/hunspell/affixmgr.*: allow twofold suffixes in compounds
          by extended version of Arno Teigseth's patch, see hun#3288562.
        - new option for this feature: COMPOUNDMORESUFFIXES

2011-02-16 Németh László <nemeth at numbertext dot org>:
        * src/*/Makefile.am: fix library versioning, the probem reported by
          Rene Engerhald and Simon Brouwer.

	* man/hunspell.4: new version based on the revised version of Ruud Baars

2011-02-02 Németh László <nemeth at OOo>: