@@ -1,6 +1,10 @@
+2013-04-19 John Thomson <john thomson at SIL>
+        * win_api: add remove() of Hunspell API (hun#3606435)
+
 2013-04-19 Rouslan Solomokhin <at sf.net>
-	* fix crash in suggestions for 99-character long words 
-	  (hun#3595024, also http://crbug.com/130128),
+        * fix crash in suggestions for 99-character long words
+          by extending arrays of SuggestMgr::forgotchar_*
+          (hun#3595024, also http://crbug.com/130128),
           thanks to also Paweł Hajdan to report the patch
 
 2013-04-01 Caolán McNamara <caolanm at LibO>:
